--- a/mini2.html
+++ b/mini2.html
@@ -6,12 +6,12 @@
   <title>Mini Crossword</title>
   <style>
     body {
-      font-family: Arial, sans-serif;
+      font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, sans-serif;
       display: flex;
       flex-direction: column;
       align-items: center;
       margin-top: 20px;
-      padding: 60px;
+      padding: 70px;
     }
     .topbar {
         width: 100%;
@@ -52,24 +52,28 @@
     .dropdown {
       display: none;
       position: absolute;
-      right: 20px;
-      top: 25px;
+      right: 0;
+      top: calc(100% + 4px);
       background: white;
-      border: 1px solid #ccc;
-      /*padding: 5px;*/
-      padding: 0px 100px 0px 0px;
+      border-radius: 8px;
+      box-shadow: 0 10px 15px -3px rgba(0, 0, 0, 0.1), 0 4px 6px -2px rgba(0, 0, 0, 0.05);
+      border: 1px solid rgba(0, 0, 0, 0.05);
+      min-width: 130px;
       z-index: 10;
+      overflow: hidden;
+
     }
 
     .dropdown div {
-      /*padding: 5px;*/
-      padding: 0px 100px 0px 0px;
+      padding: 12px 16px;
       cursor: pointer;
+      font-size: 14px;
+      color: #000;
+      transition: background-color 0.15s ease-in-out;
     }
 
     .dropdown div:hover {
-      background: #eee;
-      padding: 0px 100px 0px 0px;
+      background: rgba(0, 0, 0, 0.05);
     }
 
     .grid {
@@ -145,13 +149,44 @@
       display: flex;
       justify-content: center;
       align-items: center;
-      gap: 10px;
-      margin-top: 10px;
+      gap: 12px;
+      width: 350px;
+      margin-top: 20px;
+      background: #B0D6FB;
+      padding: 12px 20px;
+      border-radius: 0px;
+      box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
     }
 
-    button {
+    .clue-box button {
+      background: none;
+      border: none;
+      color: black;
+      font-size: 20px;
+      font-weight: 500;
       cursor: pointer;
+      padding: 16px;
+      width: 24px;
+      height: 24px;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      border-radius: 50%;
+      transition: background-color 0.2s ease-in-out;
     }
+
+    .clue-box button:hover {
+      background: rgba(0, 0, 0, 0.1);
+    }
+
+    #clue {
+      font-size: 16px;
+      color: black;
+      text-align: center;
+      flex: 1;
+      margin: 0;
+    }
+
   </style>
 </head>
 <body>
@@ -174,9 +209,9 @@
   <div class="grid" id="grid"></div>
 
   <div class="clue-box">
-    <button onclick="previousWord()">&lt;</button>
+    <button onclick="previousWord()">❮</button>
     <div id="clue">Clue will appear here</div>
-    <button onclick="nextWord()">&gt;</button>
+    <button onclick="nextWord()">❯</button>
   </div>
 
   <script>
