lock color black for connection buttons in ios

--- a/connections.html
+++ b/connections.html
@@ -152,6 +152,7 @@
       background: white;
       cursor: pointer;
       font-weight: bold;
+      color: black;
       transition: background 0.2s, transform 0.2s;
       -webkit-appearance: none;  /* Disables iOS button styling */
       appearance: none;          /* Standard fallback */
