--- a/mini.html
+++ b/mini.html
@@ -147,9 +147,9 @@
     }
 
     .error {
-      background-image: linear-gradient(135deg, transparent 49%, red 49%, red 51%, transparent 51%);
-      background-repeat: no-repeat;
-      background-size: 100% 100%;
+      background-image: linear-gradient(135deg, transparent 49%, red 49%, red 51%, transparent 51%) !important;
+      background-repeat: no-repeat !important;
+      background-size: 100% 100% !important;
     }
 
     .clue-box {
