--- a/mini.html
+++ b/mini.html
@@ -141,9 +141,8 @@
       background: gold !important;
     }
 
-    .checkmark {
-      background: lightblue !important;
-      color: black;
+    .correct {
+      color: blue !important;
     }
 
     .error {
@@ -235,18 +234,18 @@
     // === WORDS ===
     let words = [
       // Across
-      {number:1, dir:"across", cells:[[0,2],[0,3],[0,4]], clue:"1 Across placeholder"},
-      {number:2, dir:"across", cells:[[1,1],[1,2],[1,3],[1,4]], clue:"2 Across placeholder"},
-      {number:3, dir:"across", cells:[[2,1],[2,2],[2,3],[2,4]], clue:"3 Across placeholder"},
-      {number:4, dir:"across", cells:[[3,0],[3,1],[3,2],[3,3]], clue:"4 Across placeholder"},
-      {number:5, dir:"across", cells:[[4,0],[4,1],[4,2],[4,3]], clue:"5 Across placeholder"},
+      {number:1, dir:"across", cells:[[0,2],[0,3],[0,4]], clue:"1. Favourite Stockholm transportation."},
+      {number:2, dir:"across", cells:[[1,1],[1,2],[1,3],[1,4]], clue:"2. Our cartoon alter egos."},
+      {number:3, dir:"across", cells:[[2,1],[2,2],[2,3],[2,4]], clue:"3. Mexican stop."},
+      {number:4, dir:"across", cells:[[3,0],[3,1],[3,2],[3,3]], clue:"4. Me (Rodri) in 2-across."},
+      {number:5, dir:"across", cells:[[4,0],[4,1],[4,2],[4,3]], clue:"5. Part of a wedding cake, one above another."},
 
       // Down
-      {number:6, dir:"down", cells:[[0,2],[1,2],[2,2],[3,2],[4,2]], clue:"6 Down placeholder"},
-      {number:7, dir:"down", cells:[[1,1],[2,1],[3,1],[4,1]], clue:"7 Down placeholder"},
-      {number:8, dir:"down", cells:[[3,0],[4,0],[5,0]], clue:"8 Down placeholder"},
-      {number:9, dir:"down", cells:[[0,3],[1,3],[2,3],[3,3],[4,3]], clue:"9 Down placeholder"},
-      {number:10, dir:"down", cells:[[0,4],[1,4],[2,4]], clue:"10 Down placeholder"}
+      {number:6, dir:"down", cells:[[0,2],[1,2],[2,2],[3,2],[4,2]], clue:"6. Worth of a shiny thing."},
+      {number:7, dir:"down", cells:[[1,1],[2,1],[3,1],[4,1]], clue:"7. Potential destination in USA after a few Swedish winters."},
+      {number:8, dir:"down", cells:[[3,0],[4,0],[5,0]], clue:"8. Controversial currency (abrev)."},
+      {number:9, dir:"down", cells:[[0,3],[1,3],[2,3],[3,3],[4,3]], clue:"9. Us when we sleep (singular)."},
+      {number:10, dir:"down", cells:[[0,4],[1,4],[2,4]], clue:"10. Three-letter code for uniformity worldwide."}
     ];
 
     // Sort by number, then across before down
@@ -357,12 +356,13 @@
     }
 
     function handleCellInput(e, r, c) {
-      let val = e.data ? e.data.toUpperCase() : e.target.value.toUpperCase();
-
-      if (e.target.disabled) {
-        e.target.value = solution[r][c]; // restore correct answer if immutable
+      const cell = cells[r][c];
+      if (cell.classList.contains("correct")) {
+        cell.value = solution[r][c];
         return;
       }
+
+      let val = e.data ? e.data.toUpperCase() : e.target.value.toUpperCase();
 
       // Replace old letter with new one
       e.target.value = val.slice(-1);
@@ -376,7 +376,9 @@
 
     function handleCellKeyDown(e, r, c) {
       const cell = cells[r][c];
-      if (cell.disabled) return;
+      if (cell.classList.contains("correct")) {
+        return;
+      }
 
       if (e.key === "Backspace") {
         if (cell.value !== "") {
@@ -431,10 +433,6 @@
       const selCell = cells[sr][sc];
       selCell.classList.add("selected");
       if (selCell.tagName === "INPUT") {
-        if (selCell.disabled) {
-          selCell.disabled = false;
-          selCell.classList.remove("checkmark");
-        }
         selCell.focus();
       }
       clueEl.textContent = words[wordIndex].clue;
@@ -475,12 +473,10 @@
         for (let c = 0; c < 5; c++) {
           if (solution[r][c] === "#") continue;
           const cell = cells[r][c];
-          cell.classList.remove("checkmark", "error");
-          if (cell.tagName === "INPUT" && cell.disabled) cell.disabled = false;
+          cell.classList.remove("correct", "error");
           const val = cell.value;
           if (val === solution[r][c]) {
-            cell.classList.add("checkmark");
-            if (cell.tagName === "INPUT") cell.disabled = true;
+            cell.classList.add("correct");
           } else if (val !== "") {
             cell.classList.add("error");
           }
@@ -493,12 +489,10 @@
       const wcells = words[selectedWordIndex].cells;
       wcells.forEach(([r, c]) => {
         const cell = cells[r][c];
-        cell.classList.remove("checkmark", "error");
-        if (cell.tagName === "INPUT" && cell.disabled) cell.disabled = false;
+        cell.classList.remove("correct", "error");
         const val = cell.value;
         if (val === solution[r][c]) {
-          cell.classList.add("checkmark");
-          if (cell.tagName === "INPUT") cell.disabled = true;
+          cell.classList.add("correct");
         } else if (val !== "") {
           cell.classList.add("error");
         }
@@ -509,12 +503,10 @@
       if (selectedWordIndex === null || selectedCellIndex === null) return;
       const [r, c] = words[selectedWordIndex].cells[selectedCellIndex];
       const cell = cells[r][c];
-      cell.classList.remove("checkmark", "error");
-      if (cell.tagName === "INPUT" && cell.disabled) cell.disabled = false;
+      cell.classList.remove("correct", "error");
       const val = cell.value;
       if (val === solution[r][c]) {
-        cell.classList.add("checkmark");
-        if (cell.tagName === "INPUT") cell.disabled = true;
+        cell.classList.add("correct");
       } else if (val !== "") {
         cell.classList.add("error");
       }
