--- a/mini.html
+++ b/mini.html
@@ -131,6 +131,7 @@
       top: 2px;
       left: 2px;
       font-size: 10px;
+      color: #000;
     }
 
     .highlight {
@@ -233,19 +234,26 @@
 
     // === WORDS ===
     let words = [
-      // Across
-      {number:1, dir:"across", cells:[[0,2],[0,3],[0,4]], clue:"1. Favourite Stockholm transportation."},
-      {number:2, dir:"across", cells:[[1,1],[1,2],[1,3],[1,4]], clue:"2. Our cartoon alter egos."},
-      {number:3, dir:"across", cells:[[2,1],[2,2],[2,3],[2,4]], clue:"3. Mexican stop."},
-      {number:4, dir:"across", cells:[[3,0],[3,1],[3,2],[3,3]], clue:"4. Me (Rodri) in 2-across."},
-      {number:5, dir:"across", cells:[[4,0],[4,1],[4,2],[4,3]], clue:"5. Part of a wedding cake, one above another."},
-
-      // Down
-      {number:6, dir:"down", cells:[[0,2],[1,2],[2,2],[3,2],[4,2]], clue:"6. Worth of a shiny thing."},
-      {number:7, dir:"down", cells:[[1,1],[2,1],[3,1],[4,1]], clue:"7. Potential destination in USA after a few Swedish winters."},
-      {number:8, dir:"down", cells:[[3,0],[4,0],[5,0]], clue:"8. Controversial currency (abrev)."},
-      {number:9, dir:"down", cells:[[0,3],[1,3],[2,3],[3,3],[4,3]], clue:"9. Us when we sleep (singular)."},
-      {number:10, dir:"down", cells:[[0,4],[1,4],[2,4]], clue:"10. Three-letter code for uniformity worldwide."}
+      // 1 Across
+      {number:1, dir:"across", cells:[[0,2],[0,3],[0,4]], clue:"Favourite Stockholm transportation."},
+      // 1 Down
+      {number:1, dir:"down", cells:[[0,2],[1,2],[2,2],[3,2],[4,2]], clue:"Worth of a shiny thing."},
+      // 2 Down
+      {number:2, dir:"down", cells:[[0,3],[1,3],[2,3],[3,3],[4,3]], clue:"Us when we sleep (singular)."},
+      // 3 Down
+      {number:3, dir:"down", cells:[[0,4],[1,4],[2,4]], clue:"Three-letter code for uniformity worldwide."},
+      // 4 Across
+      {number:4, dir:"across", cells:[[1,1],[1,2],[1,3],[1,4]], clue:"Our cartoon alter egos."},
+      // 4 Down
+      {number:4, dir:"down", cells:[[1,1],[2,1],[3,1],[4,1]], clue:"Potential destination in USA after a few Swedish winters."},
+      // 5 Across
+      {number:5, dir:"across", cells:[[2,1],[2,2],[2,3],[2,4]], clue:"Mexican stop."},
+      // 6 Across
+      {number:6, dir:"across", cells:[[3,0],[3,1],[3,2],[3,3]], clue:"Me (Rodri) in 4-across."},
+      // 6 Down
+      {number:6, dir:"down", cells:[[3,0],[4,0],[5,0]], clue:"Controversial currency abreviation."},
+      // 7 Across
+      {number:7, dir:"across", cells:[[4,0],[4,1],[4,2],[4,3]], clue:"Part of a wedding cake, one above another."}
     ];
 
     // Sort by number, then across before down
@@ -435,7 +443,8 @@
       if (selCell.tagName === "INPUT") {
         selCell.focus();
       }
-      clueEl.textContent = words[wordIndex].clue;
+      const dirLabel = words[wordIndex].dir === 'across' ? 'Across' : 'Down';
+      clueEl.textContent = `${words[wordIndex].number} ${dirLabel}: ${words[wordIndex].clue}`;
     }
 
     function clearHighlights() {
