block right click

--- a/mini.html
+++ b/mini.html
@@ -113,6 +113,7 @@
       -moz-user-select: none;
       -ms-user-select: none;
       user-select: none;
+      -webkit-touch-callout: none;
     }
 
     input.cell:focus {
