--- a/connections.html
+++ b/connections.html
@@ -564,5 +564,5 @@
 </body>
 </html>
 
-<!-- include feature of one away --> 
 <!-- mistakes + lifes should not shift-->
+<!--hover should make it smaller -->
