--- a/wordle.html
+++ b/wordle.html
@@ -72,7 +72,8 @@
       font-weight: bold; 
       color: black;
       transition: filter 0.2s;
-      -webkit-tap-highlight-color: transparent;margin-right: 30px;
+      margin-left: auto;
+      -webkit-tap-highlight-color: transparent;margin-right: 60px;
     ">New Game</button>
   </div>
 
